--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
-  margin: 0;
+    /* margin top added 0 to 65px*/
+  /* margin-top: 65px; */
+  margin-top: 0px;
   height:100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -8,7 +10,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   max-width:100vw;
   width:100vw;
-  overflow: hidden;
+  
+  /*  overflow to overflow-x hidden */
+  overflow-x: hidden;
  
 }
 
