--- a/src/style.css
+++ b/src/style.css
@@ -19,9 +19,9 @@
 .profile-due{
   margin-top: -5px;
 }
-.react-stars{
+/* .react-stars{
   margin: 30px 10px;
-}
+} */
 .shoping_cart{
   margin-left: 30% !important;
   margin-top: 5% !important;
@@ -53,8 +53,11 @@
   appearance: none;
 }
 .filters{
-  width: 25%;
-  margin-right: 10%;
+
+  width:50%;
+  margin-right: 5%;
+  margin-top: 2%;
+  height: 84%;
 }
 .layout-container{
   background-image: url("https://i.imgur.com/7PIJ7qh.jpeg");
@@ -63,11 +66,15 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-bottom: 100px;
   
 
 
  /* max-height: 1080px; */
   /* max-width: 1920px; */
+}
+.form-select-option{
+  font-size: 19px !important;
 }
 a{
   text-decoration: none;
@@ -93,7 +100,13 @@ header{
 }
 .header-container{
   max-width: 100%;
-  overflow: hidden;
+  /* margin top added */
+  /* margin-top: -65px; */
+  /* over flow hidden removed */
+  /* overflow: hidden; */
+  width:100%;
+  /* position added */
+  /* position: fixed; */
 
 }
 .name-logout{
@@ -169,6 +182,7 @@ header .login ,.logout{
   font-weight: bold;
   font-size:24px;
 }
+
 .sell{
   width:336px;
   height: 93px;
@@ -199,6 +213,7 @@ header .login ,.logout{
   width:478px;
   margin-left: 30%;
 }
+
 .left-container{
 display:flex;
 }
@@ -212,9 +227,12 @@ display:flex;
   display: flex;
   width: auto;
   flex-wrap: wrap;
-  /* max-height: 700px; */
+  min-height: 476px;
   overflow: scroll;
  
+}
+.books-card-container{
+ height: 45%;
 }
 
 .list-container > div {
@@ -253,9 +271,12 @@ font-weight: bold;
   text-align: center;
 }
 .book-info{
-display:flex;
-flex-direction: column;
+/* display:flex;
+flex-direction: column; */
 height: 100vh;
+}
+.profile-book-container{
+  height: 80%;
 }
 .upper-container{
   height:555px;
@@ -270,9 +291,13 @@ height: 100vh;
 .book-div{
   display: flex;
   flex-direction: column;
-  margin-left: 5%;
+  justify-content: center;
+  align-items: center;
+  /* margin-left: 5%;
   width:231px;
-  margin-top:4%;
+  margin-top:4%; */
+  /* added */
+  position: relative;
 }
 .customize{
   display: flex;
@@ -287,6 +312,86 @@ height: 100vh;
   align-items: center;
   justify-content: center;
 }
+.customize-btn{
+  text-decoration: none;
+  background-color: #2DCC95;
+  color: #4C1A8B;
+  font-size:20px;
+  width:50%;
+}
+/* added */
+.reviews-star{
+  margin-top: -10px;
+}
+.rented-card-container{
+  position: relative;
+}
+.rent-book-reviews{
+  margin-top: -20px;
+}
+.rent-divider{
+  text-align: center;
+  width: 30%;
+  padding: 2px;
+  background-color:#fff;
+  border: 1px solid #fff;
+}
+/* added */
+.customize-link{
+  text-decoration: none;
+  color: #fff;
+  font-size:20px;
+  width:50%;
+}
+/* added */
+.customize-link:hover{
+  text-decoration: none;
+  color: #fff;
+  font-size:20px;
+  width:50%;
+}
+/* added */
+.book-info-card{
+  background-color: #19497dd2;
+  padding: 20px;
+  border-radius: 5px;
+}
+.customize-book-info-card{
+  background-color: #19497dd2;
+  padding: 20px;
+  border-radius: 5px;
+}
+.customize-book-container{
+  background-color: #19497dd2;
+  padding: 9px;
+  border-radius: 5px;
+}
+/* added  */
+.delete-book-btn{
+  text-decoration: none;
+  color: #fff;
+  font-size:20px;
+  width:50%;
+
+}
+/* added */
+.delete-book-btn:hover{
+  text-decoration: none;
+  color: #fff;
+  font-size:20px;
+  width:50%;
+
+}
+/* added */
+@media (max-width:767px){
+.book-info-text{
+  padding-left: 15%;
+}
+}
+.book-info-text p{
+  font-weight: 700;
+}
+
 .delete{
   display: flex;
   font-size:30px;
@@ -316,6 +421,7 @@ align-self: center;
   display: flex;
   flex-direction: column;
   height:100%;
+  width: 100%;
 }
 .info-right-container{
  
@@ -341,7 +447,7 @@ align-self: center;
  
   margin-left:10%;
 }
-.left-lower-inner-container span{
+.left-lower-inner-container p span{
   font-weight: bold;
 }
 .right-lower-inner-container{
@@ -353,8 +459,33 @@ display: flex;
 align-items: center;
 
 }
+
+.rent-btn{
+  padding:5px 15px;
+  border-radius: 5px;
+  color: #551A8B;
+  font-size:24px;
+  text-align: center;
+  margin-bottom: 15px;
+  width: 50%;
+  background-color: #2DCC95;
+}
 .instock{
-  width:132px;
+  /* added below style */
+  background-color: #2DCC95;
+  z-index: 1;
+  padding:2px 10px;
+  border-radius: 5px;
+  color: black;
+  font-weight: bold;
+  /* font-size:24px; */
+  text-align: center;
+  width: 25%;
+  position: absolute;
+  top: -5px;
+  right: 20%;
+  /* commented */
+  /* width:132px;
   height:59px;
   margin-left: 45px;
   background-color:#2DCC95;
@@ -364,7 +495,15 @@ align-items: center;
   display:flex;
   align-items: center;
   justify-content: center;
-  border-radius: 10%;
+  border-radius: 10%; */
+}
+/* added */
+.card-text-style{
+  color: #fff;
+}
+/* added */
+.card-text-style p{
+  font-size: 24px;
 }
 .btn-rent{
   background-color:#2DCC95;
@@ -415,27 +554,46 @@ align-items: center;
 }
 .customize-screen{
   /* background-image: url("https://i.imgur.com/7PIJ7qh.jpeg"); */
-  display: flex;
+  /* display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: center; */
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
 }
 .update-image{
   margin-left: 10%;
   margin-top: auto;
   margin-bottom: auto;
 }
+.nav-right-position{
+  position: absolute;
+  right: 60px;
+  z-index: 1000;
+}
 
-.wrapper{font-family:verdana;
-margin: 20px;
-padding: 30px;
-background: rgb(51,102,197); /* You can change the main color of thew form here. */
-opacity: 0.7;
-font-size: 14px;
-width:100%;
-max-width:500px;
-box-sizing: border-box;
+/* added */
+@media (max-width: 992px){
+  .responsive-dropdown{
+    margin-top: 113px !important;
+    margin-right: -35px !important;
+  }
+}
+
+.wrapper{
+  font-family:verdana;
+  margin: 20px;
+  padding: 30px;
+  /* new bg color added */
+  /* background: rgb(27, 103, 245); You can change the main color of thew form here. */
+  background-color: #19497dd2;
+  /* pervious bg clr background: rgb(51,102,197); */
+  /* opacity removed */
+  opacity: 0.8;
+  font-size: 14px;
+  width:100%;
+  max-width:500px;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
 label {
 	display: block;
@@ -452,6 +610,24 @@ label {
 	-moz-border-radius: 6px;
 	border-radius: 6px;
   border: 1px solid #fff;
+  /* bg added  */
+  background: #fff;
+  
+}
+/* select option style added */
+.wrapper form select{
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 6px;
+  padding: 5px
+  /* height: 18px;
+	padding: 20px;
+	
+	box-sizing: border-box;
+	-webkit-border-radius: 6px;
+	-khtml-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px; */
   
 }
 /* input[type="text"]:hover, textarea:hover {
@@ -471,9 +647,16 @@ input#submit {
 	text-shadow: 1px 1px 1px #000;
 	font-size: 18px;
 	text-transform: uppercase;
-	margin-top: 50px;
+	margin-top: 20px;
 	background: #000;
-	opacity: 0.5;
+  /* opacity removed */
+	/* opacity: 0.5; */
+}
+
+/* hover added */
+input#submit:hover{
+  background-color: white;
+  color: black;
 }
 
 #update:hover {
@@ -500,6 +683,20 @@ form h3{
 .wrapper select{
   font-size: 18pt;
 }
+/* sell-step-container added */
+.sell-step-container{
+  height: 190px;
+  border-radius: 10px;
+}
+.single-books-container{
+  height: 100%;
+  border-radius: 10px;
+}
+.content1, .content2, .content3{
+  background-color: #19497dd2;
+  
+}
+
 .sell-screen{
   height: 100vh;
   display: flex;
@@ -509,8 +706,8 @@ form h3{
   display: flex;
   flex-direction: column;
   color: white;
-
-  margin-left: 7%;
+/* margin commented */
+  /* margin-left: 7%; */
 
   
 }
@@ -522,12 +719,20 @@ margin-top: 100%;
 opacity: 0.8;
 }
 
-.content1 p{
+/* .content1 p{
   font-size: 20px;
   font-weight:bolder;
-}
+  color:white;
+} */
 .content1 h2,.content2 h2, .content3 h2{
   text-align: center;
+  font-size: 23px;
+  color: white;
+}
+.content1 p,.content2 p, .content3 p{
+  font-size: 16px;
+  font-weight: bolder;
+  color:white;
 }
 .sell-middle-container{
   display: flex;
@@ -536,20 +741,21 @@ opacity: 0.8;
   color:white;
 
 }
-.content2 p{
+/* .content2 p{
   font-size: 20px;
   font-weight: bolder;
-}
+  color:white;
+} */
 .sell-right-container{
   display: flex;
   flex-direction:column;
  
   color:white;
 }
-.content3 p{
+/* .content3 p{
   font-size: 20px;
   font-weight: bolder;
-}
+} */
 
 .sell-right-container img {
   width:365px;
@@ -557,10 +763,19 @@ opacity: 0.8;
   margin-top: 50%;
   opacity: 0.8;
 }
+/* name container to container-book-info */
+.container-book-info {
+  min-height: 100vh;
+  /* commented bellow all style*/
+  /* justify-content: center;
+  align-items: start;
+  display: flex;
+  text-align: center; */
+}
 .container {
   min-height: 100vh;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   display: flex;
   text-align: center;
 }
@@ -821,6 +1036,8 @@ h2.active {
   height: 100vh;
 }
 .card{
+  /* added bg image */
+  background-image: url("https://i.imgur.com/7PIJ7qh.jpeg"); 
   display: flex;
   height:100vh;
 }
@@ -898,4 +1115,12 @@ h2.active {
   height:26px;
   width:120px;
 }
+.book-info-text-right p{
+  text-align:right !important;
 }
+.customize-wrapper{
+  padding: 0px;
+  margin: 0px;
+}
+}
+
